--- a/client/src/CSS/scss_partials/home/menu/_navbar.scss
+++ b/client/src/CSS/scss_partials/home/menu/_navbar.scss
@@ -11,7 +11,7 @@
 	.navbar {
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to this element.
-		// ...the scss for the colors assigned are in home.scss
+		// ...the scss for the colors assigned are in app.scss
 		background-color: black;
 		height: v.$navbar-height;
 		width: 100%;
