--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
@@ -133,7 +133,7 @@
 		outline: none;
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to this element.
-		// ...the scss for the colors assigned are in home.scss
+		// ...the scss for the colors assigned are in app.scss
 		background-color: black;
 		// Only top and bottom because of inconsistencies
 		// ...with button vs divs.
