--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -157,7 +157,7 @@
 		border-radius: v.$base-buttton-border-radius;
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to this element.
-		// ...the scss for the colors assigned are in home.scss
+		// ...the scss for the colors assigned are in app.scss
 		background-color: black;
 		padding: 10px;
 		width: 100%;
